[package]
name = "cargo-rpmstatus"
version = "0.2.4"
description = "cargo-tree for RPM packaging"
authors = ["Daniel Morawetz <daniel@morawetz.dev",
           "kpcyrd <git@rxv.cc>",
           "Steven Fackler <sfackler@gmail.com>"]
license = "(MIT OR Apache-2.0) AND GPL-3.0-or-later"
repository = "https://github.com/dmorawetz/cargo-rpmstatus"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

[dependencies]
anyhow = "1.0"
cargo_metadata = "0.15"
petgraph = "0.6"
semver = "1"
serde_json = "1.0"

colored = "2"
serde = { version="1.0", features=["derive"] }
dirs = "6"
log = "0.4"
crossbeam-channel = "0.5"
env_logger = "0.10"
indicatif = "0.18"
rusqlite = { version = "0.28.0" }
ureq = "2.9.1"
quick-xml = { version = "0.31.0", features = ["serialize"] }
bzip2 = ">=0.4.4, <0.6"
clap = { version = "4.4.7", features = ["derive"] }
clap_mangen = "0.2.18"
rand = "0.8.5"
tar = "0.4.40"
flate2 = "1.0.28"

